--- a/now.json
+++ b/now.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
-  "name":"ILog",
+  "name": "ILog",
+  "builds": [
+    { "src": "package.json", "use": "@now/static-build" }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "dist/$1" }
+    { "src": "/(.*)", "dest": "dist/$1" },
+    { "src": ".*", "dest": "/index.html" }
   ]
 }
